--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "webpack-bundle-analyzer": "^3.7.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "docs:build": "vuepress build docs"
   },
   "keywords": [],
   "author": "",
