--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 os:
-  osx
+  linux
+
+dist:
+  trusty
 
 language: node_js
 node_js:
@@ -16,8 +19,9 @@ git:
   quiet: true
 
 deploy:
+  strategy: git
   provider: pages
-  skip_cleanup: true
-  github_token: $github_token
+  cleanup: false
+  token: $github_token
   keep_history: true
   local_dir: docs/.vuepress/dist
