--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
   - npm run docs:build
 
 before_deploy:
-  - "echo zheilbron.com > CNAME"
+  - "echo zheilbron.com > docs/.vuepress/dist/CNAME"
 
 branches:
   only:
